testing anchor tag

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
     </div>
 </div>
+<a href="www.facebook.com">facebook</a>
 <script>
         window.paypalCheckoutReady = function() {
           paypal.checkout.setup('6XF3MPZBZV6HU', {
